[package]
name = "clap-show"
authors = ["Juan Delgado"]
version = "0.1.0"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/roloenusa/clap-show-rs"
description = "Autogenerate documentation files for clap base CLIs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.*.*"

[dev-dependencies]
clap = { version = "4.*.*", features = ["derive"] }

pretty_assertions = "1.3.0"