[package]
name = "clap-show"
authors = ["Juan Delgado"]
version = "0.3.2"
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/roloenusa/clap-show-rs"
description = "Autogenerate documentation files for clap base CLIs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.*.*"
handlebars = "5.1.2"
ramhorns = "0.14.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.115"

[dev-dependencies]
clap = { version = "4.*.*", features = ["derive"] }

pretty_assertions = "1.3.0"

